--- a/assets/sass/_normalize.sass
+++ b/assets/sass/_normalize.sass
@@ -33,7 +33,7 @@ body
 	flex-direction: column
 	z-index: 1
 	min-height: 100vh
-	background: $background
+	background: $type
 
 main
 	flex: 1
@@ -112,7 +112,10 @@ svg
 .layout-leave-to 
 	opacity: 0
 
-.page-wrapper
-	min-height: 100vh
+.page
+	width: 100%
+	max-width: 1074px
 	display: flex
 	flex-direction: column
+	align-items: flex-start
+	gap: em(60, 16)
