--- a/assets/sass/_normalize.sass
+++ b/assets/sass/_normalize.sass
@@ -119,3 +119,9 @@ svg
 	flex-direction: column
 	align-items: flex-start
 	gap: em(60, 16)
+	&-wrapper
+		width: 100%
+		display: flex
+		align-items: flex-start
+		justify-content: space-between
+		gap: em(30 ,16)
